src/snapshots/alma__parser__tests__module_parser-50.snap
---
source: src/parser.rs
expression: "parse(\"\\\nmodule Test exposing (main)\n\ntype Fruit = Banana\n\nmain = Banana\n\")"

---
Input:

module Test exposing (main)

type Fruit = Banana

main = Banana


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 11,
                    line: 1,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Node {
                start: 22,
                end: 26,
                line: 1,
                column: 22,
                value: Identifier(
                    Node {
                        start: 22,
                        end: 26,
                        line: 1,
                        column: 22,
                        value: Identifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                ),
            },
        ],
        imports: [],
        definitions: [
            Untyped(
                Pattern(
                    Node {
                        start: 50,
                        end: 54,
                        line: 5,
                        column: 0,
                        value: Identifier(
                            Node {
                                start: 50,
                                end: 54,
                                line: 5,
                                column: 0,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 2,
                                    },
                                },
                            },
                        ),
                    },
                    Node {
                        start: 57,
                        end: 63,
                        line: 5,
                        column: 7,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Identifier(
                                None,
                                CapitalizedIdentifier(
                                    Node {
                                        start: 57,
                                        end: 63,
                                        line: 5,
                                        column: 7,
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 4,
                                            },
                                        },
                                    },
                                ),
                            ),
                        },
                    },
                ),
            ),
        ],
        type_definitions: [
            Node {
                start: 29,
                end: 48,
                line: 3,
                column: 0,
                value: TypeDefinition_ {
                    name: Node {
                        start: 34,
                        end: 39,
                        line: 3,
                        column: 5,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 3,
                            },
                        },
                    },
                    vars: [],
                    typ: Union(
                        [
                            Node {
                                start: 42,
                                end: 48,
                                line: 3,
                                column: 13,
                                value: Constructor_ {
                                    name: Node {
                                        start: 42,
                                        end: 48,
                                        line: 3,
                                        column: 13,
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 4,
                                            },
                                        },
                                    },
                                    params: [],
                                },
                            },
                        ],
                    ),
                },
            },
        ],
    },
    [],
)
