src/snapshots/alma__parser__tests__module_parser-51.snap
---
source: src/parser.rs
expression: "parse(\"\\\nmodule Test exposing (Fruit(Banana))\n\ntype Fruit = Banana\n\")"

---
Input:

module Test exposing (Fruit(Banana))

type Fruit = Banana


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 11,
                    line: 1,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Node {
                start: 22,
                end: 35,
                line: 1,
                column: 22,
                value: Type(
                    Node {
                        start: 22,
                        end: 27,
                        line: 1,
                        column: 22,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    [
                        Node {
                            start: 28,
                            end: 34,
                            line: 1,
                            column: 28,
                            value: CapitalizedIdentifier_ {
                                name: SymbolU32 {
                                    value: 3,
                                },
                            },
                        },
                    ],
                ),
            },
        ],
        imports: [],
        definitions: [],
        type_definitions: [
            Node {
                start: 38,
                end: 57,
                line: 3,
                column: 0,
                value: TypeDefinition_ {
                    name: Node {
                        start: 43,
                        end: 48,
                        line: 3,
                        column: 5,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    vars: [],
                    typ: Union(
                        [
                            Node {
                                start: 51,
                                end: 57,
                                line: 3,
                                column: 13,
                                value: Constructor_ {
                                    name: Node {
                                        start: 51,
                                        end: 57,
                                        line: 3,
                                        column: 13,
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 3,
                                            },
                                        },
                                    },
                                    params: [],
                                },
                            },
                        ],
                    ),
                },
            },
        ],
    },
    [],
)
